--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -4,7 +4,7 @@ body {
   font-family: "Stick No Bills", sans-serif;
   font-size: 18px;
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url("imgs/bg3.gif");
+    url("assets/imgs/bg3.gif");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
