--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -10,3 +10,15 @@ body {
   background-position: center;
   background-attachment: fixed;
 }
+
+.splash {
+  position: absolute;
+  top: 20%;
+  left: 30%;
+  background-image: url("imgs/splash.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  pointer-events: none;
+  width: 700px;
+  height: 700px;
+}
