--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -15,7 +15,7 @@ body {
   position: absolute;
   top: 20%;
   left: 30%;
-  background-image: url("imgs/splash.png");
+  background-image: url("/imgs/splash.png");
   background-size: cover;
   background-repeat: no-repeat;
   pointer-events: none;
